chore(resource): add unit tests